@@ -242,7 +242,7 @@ def check_directories(calc_id):
 
 
 def create_jobs(job_inis, log_level=logging.INFO, log_file=None,
-                user_name=USER, hc_id=None, host=None):
+                user_name=USER, hc_id=None, host=None, tag=''):
     """
     Create job records on the database.
 
@@ -254,10 +254,6 @@ def create_jobs(job_inis, log_level=logging.INFO, log_file=None,
     except Exception:  # gaierror
         host = None
     jobs = []
-    if len(job_inis) > 1:  # create a tag
-        tag = '%d-%d'
-    else:
-        tag = ''
     for job_ini in job_inis:
         if isinstance(job_ini, dict):
             dic = job_ini
@@ -268,9 +264,12 @@ def create_jobs(job_inis, log_level=logging.INFO, log_file=None,
         job = logs.init(dic, None, log_level, log_file, user_name, hc_id, host)
         jobs.append(job)
         if tag:
+            logs.dbcmd('add_tag_to_job', job.calc_id, tag)
+        elif len(job_inis) > 1:
+            # automatic tag
             j0 = jobs[0].calc_id
             j1 = j0 + len(job_inis) - 1
-            logs.dbcmd('add_tag_to_job', job.calc_id, tag % (j0, j1))
+            logs.dbcmd('add_tag_to_job', job.calc_id, f'{j0}-{j1}')
     check_directories(jobs[0].calc_id)
 
     return jobs
