@@ -1,4 +1,5 @@
   [Michele Simionato]
+  * Added a `--tag` option to `oq engine --run` to tag jobs
   * Supported site-specific gsim logic trees via `site_labels`
   * Added `source_info` to the global SES file
   * Optimized `_save_events` for large calculations over 100,000 events
